<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/sync_header"
        app:icon="@drawable/ic_sync_24">

        <Preference
            app:key="sync_now"
            app:title="@string/sync_now_title"
            />

        <EditTextPreference
            app:key="endpoint"
            app:title="@string/endpoint_title"
            app:enableCopying="true"
            app:defaultValue="https://raw.githubusercontent.com/scavazzini/clevent/main/app/src/main/assets/mocks/products.json"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/tags_header"
        app:icon="@drawable/ic_dark_nfc_24">

        <Preference
            app:key="erase_tag"
            app:title="@string/erase_tag_title"
            app:summary="@string/erase_tag_summary"
            />

    </PreferenceCategory>

</PreferenceScreen>
