<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="dev.scavazzini.clevent.utilities.extensions.LocaleExtensionsKt" />

        <variable
            name="date"
            type="String" />

        <variable
            name="customer"
            type="dev.scavazzini.clevent.data.models.Customer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.receipt.ReceiptFragment">

        <TextView
            android:id="@+id/receipt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subTitleText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@{date}"
            tools:text="19/09/2020 04:25"
            android:background="@color/colorPrimaryLight"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_list"
            android:layout_width="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/receipt_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view_box_footer"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/product_item_receipt"
            />

        <TextView
            android:id="@+id/products_empty_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/no_products"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/receipt_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view_box_footer"
            app:layout_constraintStart_toStartOf="parent"
            />

        <View
            android:id="@+id/view_box_footer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="58dp"
            app:layout_constraintTop_toTopOf="@id/label_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/label_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/footerText"
            android:text="@string/label_total"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/label_balance"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/receipt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/footerText"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/receipt_balance"
            android:text="@{LocaleExtensionsKt.toCurrency(customer.total)}"
            tools:text="R$ 50,00"
            />

        <TextView
            android:id="@+id/label_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_current_balance"
            style="@style/footerText"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/view_box_footer"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/receipt_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/footerText"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view_box_footer"
            android:text="@{LocaleExtensionsKt.toCurrency(customer.balance)}"
            tools:text="R$ 100,00"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
